# legal-case-analyze-agent

./: .clinerules  .gitignore  README.md  mcp llms-text.md  research-canvas.md  test-instructions.md
.github/: PULL_REQUEST_TEMPLATE.md
app/src/agent/: .gitignore  load_test.py  pyproject.toml  server.py  server.py.bak
app/src/agent-js/src/: chat.ts
app/src/agent/legal_case_analyze_agent/: demo.py
app/src/agent/legal_case_analyze_agent/crewai/: agent.py  demo.py  download.py
app/src/agent/legal_case_analyze_agent/langgraph/: agent.py  chat.py  delete.py  demo.py  download.py  known_cases.py  model.py  scraper.py  search.py
app/src/agent/research_canvas/langgraph/: agent.py  known_cases.py  scraper.py  state.py
app/src/backup_20250329_140758/app/: layout.tsx
app/src/backup_20250329_140758/components/: Main.tsx
app/src/ui/: README.md  package.json  pnpm-lock.yaml
app/src/ui/src/app/: Main.tsx  layout.tsx  page.tsx
app/src/ui/src/app/api/copilotkit/: route.ts
app/src/ui/src/components/: ResearchCanvas.tsx
app/src/ui/src/context/: ChatStateContext.tsx
app/src/ui/src/lib/: types.ts
docs/: git_workflow.md  report_chat_implementation_plan.md  requirement_definition.md  task.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
